added tests userRepository and userService