@@ -1,6 +1,6 @@
 package com.capgemini.solejnik.qveta.repository;
 
-import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.*;
 
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -8,21 +8,22 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 
-import com.capgemini.solejnik.qveta.entity.UserEntity;
 import com.capgemini.solejnik.qveta.enums.RoleEnum;
+import com.capgemini.solejnik.qveta.service.UserService;
+import com.capgemini.solejnik.qveta.to.UserTo;
 
 @RunWith(SpringJUnit4ClassRunner.class)
 @ContextConfiguration(locations = "classpath:META-INF/service.xml")
-public class UserRepositoryTest {
+public class UserServiceTest {
 	@Autowired
-	private UserRepository userRepository;
+	private UserService userService;
 
 	@Test
 	public void test() {
-		UserEntity userEntity = new UserEntity("Simon", "Olejnik", "simon@olejnik.com", "123", RoleEnum.ADMIN);
-		userRepository.save(userEntity);
-		UserEntity one = userRepository.findAll().get(0);
-		assertNotNull(one);
+		UserTo userTo = new UserTo("Simon", "Olejnik", "simon@simon.com", "123", RoleEnum.ADMIN);
+		userService.saveUser(userTo);
+		UserTo first = userService.getFirst();
+		assertNotNull(first);
 	}
 
 }
